--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -64,14 +64,25 @@
   <!-- features -->
 
   <section id="features">
-    <h3>Easy to use</h3>
-    <p>So easy to use, even your dog could do it.</p>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+    <div class="row">
+      <div class="feature-box col-lg-4">
+        <i class="icons fas fa-check-circle fa-3x"></i>
+        <h3>Easy to use</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="feature-box col-lg-4">
+        <i class="icons fas fa-bullseye fa-3x"></i>
+        <h3>Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="feature-box col-lg-4">
+        <i class="icons fas fa-heart fa-3x"></i>
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
   </section>
 
   <section id="testimonials">
@@ -151,4 +162,4 @@
 
 </body>
 
-</html>>
+</html>
